; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl_frontend_iscsi.c_cfiscsi_shutdown.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/ctl/extr_ctl_frontend_iscsi.c_cfiscsi_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfiscsi_softc = type { i32, i32, i32, i32, i32 }

@cfiscsi_softc = common dso_local global %struct.cfiscsi_softc zeroinitializer, align 4
@EBUSY = common dso_local global i32 0, align 4
@cfiscsi_data_wait_zone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cfiscsi_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cfiscsi_shutdown() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.cfiscsi_softc*, align 8
  store %struct.cfiscsi_softc* @cfiscsi_softc, %struct.cfiscsi_softc** %2, align 8
  %3 = load %struct.cfiscsi_softc*, %struct.cfiscsi_softc** %2, align 8
  %4 = getelementptr inbounds %struct.cfiscsi_softc, %struct.cfiscsi_softc* %3, i32 0, i32 4
  %5 = call i32 @TAILQ_EMPTY(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %0
  %8 = load %struct.cfiscsi_softc*, %struct.cfiscsi_softc** %2, align 8
  %9 = getelementptr inbounds %struct.cfiscsi_softc, %struct.cfiscsi_softc* %8, i32 0, i32 3
  %10 = call i32 @TAILQ_EMPTY(i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %7, %0
  %13 = load i32, i32* @EBUSY, align 4
  store i32 %13, i32* %1, align 4
  br label %23

14:                                               ; preds = %7
  %15 = load i32, i32* @cfiscsi_data_wait_zone, align 4
  %16 = call i32 @uma_zdestroy(i32 %15)
  %17 = load %struct.cfiscsi_softc*, %struct.cfiscsi_softc** %2, align 8
  %18 = getelementptr inbounds %struct.cfiscsi_softc, %struct.cfiscsi_softc* %17, i32 0, i32 1
  %19 = call i32 @cv_destroy(i32* %18)
  %20 = load %struct.cfiscsi_softc*, %struct.cfiscsi_softc** %2, align 8
  %21 = getelementptr inbounds %struct.cfiscsi_softc, %struct.cfiscsi_softc* %20, i32 0, i32 0
  %22 = call i32 @mtx_destroy(i32* %21)
  store i32 0, i32* %1, align 4
  br label %23

23:                                               ; preds = %14, %12
  %24 = load i32, i32* %1, align 4
  ret i32 %24
}

declare dso_local i32 @TAILQ_EMPTY(i32*) #1

declare dso_local i32 @uma_zdestroy(i32) #1

declare dso_local i32 @cv_destroy(i32*) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
